k8s/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-backend
  template:
    metadata:
      labels:
        app: express-backend
    spec:
      containers:
      - name: express-backend
        image: rayenrk/express-backend:v4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  selector:
    app: express-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
