k8s/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: rayenrk/react-frontend:v2
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP
